# aem-interpretation-conversion

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  README.rst  Setup.cfg  build_environment.sh  ci_gdal_install.sh  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: test-coverage.yml
aemworkflow/: aemworkflow.py  commands.py  config.py  conversion.py  exports.py  gmt_2_met.py  interpretation.py  pre_interpretation.py  utilities.py  validation.py
aemworkflow/scripts/: aemworkflow.py  commands.py
builds/: linux_gdal.sh  windows_gdal.bat
docs/source/: background.rst  conf.py  index.rst
docs/source/installation/: index.rst  install_anaconda.rst  install_venv.rst
docs/source/run_scripts/: index.rst
docs/source/using_web_ui/: index.rst
scripts/: commands.py  conversion.py  exports.py  interpretation.py  pre_interpretation.py  validation.py
test-results/: results.xml
tests/: _run-tests.sh  requirements-dev.txt  test_commands.py  test_conversion.py  test_exports.py  test_gmt_2_met.py  test_interpretation.py  test_pre_interpretation.py  test_utilities.py  test_validation.py
