[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aemworkflow"
version = "0.0.1"
authors = [
  { name="Geoscience Australia", email="toolkits@ga.gov.au" },
]
description = "Geoscience Australia’s Online Airborne Electromagnetic Interpretation Conversion Tool"
readme = "README.md"
requires-python = ">=3.12.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "click==8.1.3",
    "folium==0.19.5",
    "geopandas==1.0.1",
    "importlib-metadata==8.6.1",
    "loguru"==0.7.3
    "markdown"==3.7
    "pandas"==2.2.3
    "pytz"==2025.1
    "pyyaml"==6.0.2
    "gdal"==3.10.2
]

[project.scripts]
pre-interpretation = "aemworkflow.pre_interpretation:cli"
interpretation = "aemworkflow.interpretation:cli"
validation = "aemworkflow.validation:cli"
conversion = "aemworkflow.conversion:cli"
export = "aemworkflow.export:cli"

[project.urls]
Homepage = "https://github.com/GeoscienceAustralia/aem-interpretation-conversion"
Issues = "https://github.com/GeoscienceAustralia/aem-interpretation-conversion/issues"